# AutoSpeechDataset

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  agent_factory.py  agents_config.py  docker-compose.yaml  drift_report.md  graph.py  improved_prompt.txt  main.py  multi_agent_graph.py  persistence_test.py  pyproject.toml  requirements.txt  run_pipeline.py  security_report.md  summary.md  tools.py
.github/workflows/: main.yml
inputs/: links.txt
scripts/: download_audio.py  transcribe.py
src/: PROJECT_REPORT.md  adversarial_tests.py  agent_personas.md  analyze_feedback.py  api.py  app.py  checkpoint_db.sqlite  checkpoint_db.sqlite-shm  checkpoint_db.sqlite-wal  drift_report.md  feedback_db.py  feedback_log.db  guardrails_config.py  main_cli.py  persistence_test.py  rag.py  run_eval.py  schema.py  secured_graph.py  seed_feedback.py  test_dataset.json
src/api/: app.py  routes.py
src/core/: config.py  exceptions.py  logging.py
src/schemas/: models.py
src/services/: pipeline_orchestrator.py  processing_service.py  transcription_service.py  youtube_service.py
src/utils/: file_helpers.py  url_helpers.py
transcripts/: sample1.json
