[project]
name = "speech-dataset-pipeline"
version = "2.0.0"
description = "Production-grade YouTube to Speech Dataset automation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "deepgram-sdk>=6.0.1",
    "fastapi>=0.136.1",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2026.2.21",
]

[project.scripts]
pipeline = "src.main_cli:main"
